--- a/JassClient/src/view/style.css
+++ b/JassClient/src/view/style.css
@@ -4,3 +4,10 @@
 		-fx-background-repeat: stretch; 
 		-fx-background-position: center center; 
 }
+
+#tisch2{
+		-fx-background-image: url(/images/JassTeppichRot.jpg);
+		-fx-background-repeat: stretch; 
+		-fx-background-position: center center; 
+}
+
