--- a/JassClient/src/view/style.css
+++ b/JassClient/src/view/style.css
@@ -3,11 +3,21 @@
 		-fx-background-image: url(/images/JassTeppichGruen.jpg);
 		-fx-background-repeat: stretch; 
 		-fx-background-position: center center; 
+		-fx-background-size: 500px;
+ 		 
 }
 
 #tisch2{
 		-fx-background-image: url(/images/JassTeppichRot.jpg);
 		-fx-background-repeat: stretch; 
 		-fx-background-position: center center; 
+		-fx-background-size: 500px;
+}
+
+#backCard{
+			
+		-fx-size: 500px;
+ 
+	
 }
 
