--- a/JassClient/src/view/style.css
+++ b/JassClient/src/view/style.css
@@ -21,3 +21,36 @@
 		-fx-background-size: 500px;
 }
 
+#messageLabel{
+	
+	-fx-font-size: 20px ; 
+	-fx-text-fill: black; 
+	-fx-background-color: lightblue;
+	-fx-border-radius: 10 10 10 10; 
+    -fx-background-radius: 10 10 10 10; 
+    -fx-min-width: 270;
+    -fx-min-height:300;
+	-fx-max-width: 270;
+    -fx-max-height:300;
+    -fx-effect: dropshadow(three-pass-box, grey, 10, 0, 0, 0);
+}
+
+#chatField{
+	-fx-min-width: 200;
+    -fx-min-height: 50;
+	-fx-max-width: 200;
+    -fx-max-height: 50;
+
+}
+
+#chatButton{
+	-fx-min-width: 70;
+    -fx-min-height: 50;
+	-fx-max-width: 70;
+    -fx-max-height: 50;
+
+}
+
+
+
+
