--- a/JassClient/src/styleSheets/ConnectCenter.css
+++ b/JassClient/src/styleSheets/ConnectCenter.css
@@ -5,5 +5,81 @@
 }
 
 #normal{
-	-fx-text-fill: black;
+	-fx-text-fill: White;
 }
+
+#conBut {
+	-fx-font-size: 15px;
+	-fx-text-fill: Saddlebrown;
+	-fx-border-color: Saddlebrown;
+	-fx-background-color: peachpuff;
+	-fx-border-width: 1px;
+	-fx-border-style: solid;
+	-fx-border-radius: 8px;
+
+	
+	}
+	
+#conBut:hover {
+	-fx-font-size: 15px;
+	-fx-text-fill: White;
+	-fx-border-color: White;
+	-fx-border-width: 1px;
+	-fx-border-style: solid;
+	-fx-border-radius: 8px;
+	-fx-background-color: Saddlebrown;
+	-fx-font-style: italic;
+}
+
+#window{
+	-fx-min-width: 600;
+    -fx-min-height: 300;
+	-fx-max-width: 600;
+    -fx-max-height: 300;
+	-fx-background-image: url(/images/backgroundLogin.jpg);
+
+}
+
+#labels{
+	-fx-font-size:15px;
+	-fx-text-fill: White;
+	-fx-font-weight: bold;
+	-fx-padding: 15px;
+	-fx-border-spacing: 15px;
+	-fx-alignment: center;
+	-fx-text-alignment: center;
+	-fx-min-width: 150px;
+	-fx-max-width: 150px;
+   
+}
+
+#textField{
+	-fx-font-size:15px;
+	-fx-padding: 15px;
+	-fx-border-color: darkgrey;
+	-fx-border-width: 1px;
+	-fx-border-style: solid;
+	-fx-alignment: center;
+	-fx-text-alignment: Left;
+	-fx-background-color:oldlace;
+	-fx-min-width: 250px;
+	-fx-max-width: 250px;
+
+}
+
+
+#welcometext{
+	-fx-font-size:17px;
+	-fx-text-fill: Sandybrown;
+	-fx-font-weight: bold;
+	-fx-background-size: cover;
+	-fx-min-width: 250px;
+	-fx-max-width: 250px;
+	-fx-min-height: 50px;
+	-fx-max-height: 50px;
+	-fx-alignment: center;
+	
+  
+	
+}
+
