--- a/JassClient/src/styleSheets/ConnectCenter.css
+++ b/JassClient/src/styleSheets/ConnectCenter.css
@@ -2,8 +2,7 @@
 
 #invalid{
 	-fx-text-fill: red;
-	
-		-fx-font-size:15px;
+	-fx-font-size:15px;
 	-fx-padding: 15px;
 	-fx-border-color: darkgrey;
 	-fx-border-width: 1px;
@@ -17,9 +16,7 @@
 
 #normal{
 	-fx-text-fill: black;
-	
-	
-		-fx-font-size:15px;
+	-fx-font-size:15px;
 	-fx-padding: 15px;
 	-fx-border-color: darkgrey;
 	-fx-border-width: 1px;
@@ -32,13 +29,17 @@
 }
 
 #conBut {
-	-fx-font-size: 15px;
+	-fx-font: 15px "Broadway";
 	-fx-text-fill: Saddlebrown;
 	-fx-border-color: Saddlebrown;
 	-fx-background-color: peachpuff;
 	-fx-border-width: 1px;
 	-fx-border-style: solid;
 	-fx-border-radius: 8px;
+	-fx-min-width: 150;
+    -fx-min-height: 40;
+	-fx-max-width: 150;
+    -fx-max-height: 40;
 
 	
 	}
@@ -64,7 +65,7 @@
 }
 
 #labels{
-	-fx-font-size:15px;
+	-fx-font-size:15px "Broadway";
 	-fx-text-fill: White;
 	-fx-font-weight: bold;
 	-fx-padding: 15px;
@@ -77,7 +78,7 @@
 }
 
 #textField{
-	-fx-font-size:15px;
+	-fx-font-size: 15px;
 	-fx-padding: 15px;
 	-fx-border-color: darkgrey;
 	-fx-border-width: 1px;
