--- a/JassClient/src/view/style.css
+++ b/JassClient/src/view/style.css
@@ -117,5 +117,18 @@
 
 }
 
+#gwuenner{
+	
+	-fx-font-size: 20px ;
+	-fx-font-type: bold;
+	-fx-font-weight: bold;
+	-fx-text-fill: black; 
+	-fx-background-color: white;
+	-fx-border-radius: 10 10 10 10; 
+    -fx-background-radius: 10 10 10 10; 
+    -fx-min-width: 150;
+    -fx-min-height:20;
+    -fx-opacity: 0.5
+}
 
 
